z-index android fix try

--- a/css/me.css
+++ b/css/me.css
@@ -135,5 +135,8 @@ a {
 }
 
 body {
+    -webkit-animation: bugfix infinite 1s;
     color:white;
 }
+
+@-webkit-keyframes bugfix { from {padding:0;} to {padding:0;} }
